Mon Sep  1 20:34:31 2014  fox

     172* include/fcterm.h
          src/fcterm.c
          src/term.c
          Fix 'fcterm -ls' not working.

Thu Aug 28 22:28:12 2014  fox

     171* include/fcterm.h
          include/sequence.h
          makefile
          mkseq.sh
          src/ctw.c
          src/fcterm.c
          src/term.c
          Add 'fcterm create-screen'.
	  Allow type in whilst in minimap mode.

Wed Aug 27 08:48:04 2014  fox

     170* include/fcterm.h
          makefile
          src/ctw.c
          src/fcterm.c
          src/group.c
          Launch group_init after fork, not before.

     169* archive.sh
          src/group.c
          Archive: 1.0021

     168* include/ctw.h
          include/ctwP.h
          include/fcterm.h
          include/sequence.h
          machines/linux-x86_64.sh
          makefile
          mkseq.sh
          src/ctw.c
          src/fcterm.c
          src/group.c
          src/term.c
          Added group support and the "fcterm <cmd>" subcommands.

Tue Aug 12 23:33:45 2014  fox

     167* include/ctw.h
          include/fcterm.h
          src/ctw.c
          src/fcterm.c
          Add "Search" to the popup menu.

Sun Jul  6 22:10:26 2014  fox

     166* include/ctw.h
          include/sequence.h
          mkseq.sh
          samples/24-bit-color.pl
          src/ctw.c
          src/ptysrv.c
          src/term.c
          Add ESC[38;2;rr;gg;bb;m and ESC[48;2;rr;gg;bb;m support

Thu Jul  3 21:25:41 2014  fox

     165* src/term.c
          More aggressive backing off in cb_read to avoid uncontrol ^C.

Wed Jul  2 22:33:44 2014  fox

     164* makefile
          src/term.c
          Fix the infinite output/Ctrl-C problem by terminating cb_read
	  if any X11 input.

Sat May 31 13:37:52 2014  fox

     163* 
          include/ctw.h
          include/ctwP.h
          src/ctw.c
          Build with stpcpy to workaround gcc/glibc bug.

Fri May 23 23:05:11 2014  fox

     162* src/ctw.c
          Add hyperlink detection/display.
